--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Lessons gIT</h1>
-    <p>git init </p>
     <p>
-        git add . 
+        git init
+        git add .
+        git commit -m "my comment"
+        git remote add origin ссылка
+        git remote add origin https://github.com/ArtiomDumchykov/Project1.git
+        git push -u origin master
     </p>
 </body>
 </html>
