--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <h1>Lessons gIT</h1>
+    <h2>v3</h2>
     <p>
         git init
         git add .
@@ -16,5 +19,6 @@
         git remote add origin https://github.com/ArtiomDumchykov/Project1.git
         git push -u origin master
     </p>
+
 </body>
 </html>
