--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         git remote add origin ссылка
         git remote add origin https://github.com/ArtiomDumchykov/Project1.git
         git push -u origin master
+        git push
+
     </p>
 
 </body>
